# KafkaLog-Lense

./: .gitattributes  .gitignore  README.md
consumers/rust_consumer/: Cargo.toml  build.rs
consumers/rust_consumer/src/: LogMessage.proto  LogMessage.rs  consumer.rs  es_wrapper.rs  main.rs  uid_generator.rs
dockerFile/: docker-compose.yaml  docker-compose_es_kibana.yaml  docker-compose_kafka.yaml
docs/: overall_arch.drawio
metrics/: Cargo.toml
metrics/src/: main.rs  uid_generator.rs
producers/cpp/: .gitignore  CMakeLists.txt  diff.sh  run.sh
producers/cpp/include/: kafka_producer.h  normal_distribution.h  uid.h  utils.h
producers/cpp/src/: CMakeLists.txt  kafka_producer.cpp  main.cpp  normal_distribution.cpp  uid.cpp  utils.cpp
producers/go/: go.mod  go.sum
producers/go/main/: main.go
producers/go/main/protobuf/: LogMessage.pb.go
producers/java/: .gitignore  build.gradle  settings.gradle
producers/java/src/main/java/: JavaProducer.java
producers/java/src/main/java/main/: JavaProducer.java
producers/java/src/main/java/protobuf/: LogMessageOuterClass.java
producers/java/src/main/java/serializer/: ProtobufSerializer.java
producers/java/src/main/java/utils/: Utils.java
producers/java/src/main/java/uuid/: Uid.java
producers/java/src/main/resources/: log4j2.xml
producers/rust/rust_producer/: Cargo.toml  build.rs
producers/rust/rust_producer/src/: LogMessage.rs  main.rs  producer.rs  uid_generator.rs  utils.rs
producers/rust/rust_producer/src/protos/: LogMessage.proto
proto/: LogMessage.proto
scripts/: cpp_protoc.sh  go_protoc.sh  java_protoc.sh  rust_protoc.sh
