[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
elasticsearch = "8.5.0-alpha.1"
opentelemetry = { version = "0.23.0", features = ["metrics", "otel_unstable"] }
opentelemetry-prometheus = "0.16.0"
opentelemetry-stdout = { version = "0.4.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["metrics", "rt-tokio"] }
rand = "0.8.5"
random = "0.14.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
sha256 = "1.5.0"
sysinfo = "0.30.12"
tokio = { version = "1.37.0", features = ["full"] } 
