[package]
name = "rust_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", default-features = false }
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }
prost = "0.12.1"
prost-types = "0.12.1"
protobuf = "2.27.1"
chrono = "0.4.31"

