[package]
name = "rust_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", default-features = false }
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }
protobuf = "2.27.1"
chrono = "0.4.31"
uuid = "1.5.0"
sha256 = "1.4.0"
rng = "0.1.0"
rand = "0.8.5"
serde_json = "1.0.108"

