[package]
name = "rust_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protoc-rust = "2.28.0"
protobuf = "2.27.1"
protobuf-codegen = "2.27.1"

[dependencies]
rdkafka = { version = "0.25", default-features = false }
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
serde_json = "1.0.108"
protobuf = "2.27.1"
protobuf-codegen = "2.27.1"
protoc-rust = "2.28.0"
elasticsearch = "8.5.0-alpha.1"
opentelemetry = "0.23.0"


