[package]
name = "rust_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protoc-rust = "2.28.0"
protobuf = "2.27.1"
protobuf-codegen = "2.27.1"

[dependencies]
rdkafka = { version = "0.25", default-features = false }
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
sha256 = "1.4.0"
rng = "0.1.0"
rand = "0.8.5"
serde_json = "1.0.108"
protobuf = "2.27.1"
protobuf-codegen = "2.27.1"
protoc-rust = "2.28.0"
futures = "0.3.29"
